Ajustes nas classes para utilização do lombok, remoção dos Getter e Setter
Ajuste na classe de configuração DocumentFormatter

Para validar se o CPF/CNPJ tem uma numeração válida, e formata caso seja válido

implementação da chamada do métodos para formatar evalidar documento nas classes Cliente e fornecedor

Ajuste no XML do jasper

Remoção da chamada Orcamento, cliente e produto Repositóri da classe CLienteController